# Sticker-Nah

./: .gitignore  README.md  SPEC.md  package-lock.json  package.json
scripts/: build-ffmpeg-min-android.sh  build-ffmpeg-min-win.sh  ffmpeg-version.sh  package-portable.ps1  sign.ps1
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: convert.rs  ffmpeg.rs  mod.rs  platform.rs  probe.rs
tests/: generate-fixtures.ps1
