[package]
name = "sticker-nah"
version = "0.1.0"
edition = "2021"
description = "Конвертер медиа в стикеры WebM VP9 512x512 <=256KB"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
clipboard-win = "5"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
