[package]
name = "sticker-nah"
version = "1.0.0"
edition = "2021"
description = "Конвертер медиа в стикеры WebM VP9 512x512 <=256KB"

[lib]
name = "sticker_nah_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = { version = "28.2.2", features = ["legacy_storage_permission"] }

[target.'cfg(windows)'.dependencies]
arboard = "3"
clipboard-win = "5"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
